# Zmemo.opensource

./: .gitignore  CODE_OF_CONDUCT.md  PORTFOLIO.md  QUICKSTART.md  README.md  ROADMAP.md  SETUP.md  ZMEMO_USER_GUIDE.md  run_backend.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: main.py  main.spec  requirements.txt  runner.py
backend/src/indexing/: indexer.py
backend/src/models/: database.py
backend/src/search/: embeddings.py  query_cache.py  search_engine.py
backend/src/sync/: gmail_sync.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: prepare-desktop.ps1
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/src/: main.rs
frontend/src/components/: Filters.jsx  Header.jsx  HowItWorks.jsx  RightSidebar.jsx  SearchBar.jsx  SearchResults.jsx  Sidebar.jsx  SplashScreen.jsx  StatsPanel.jsx  SyncStatus.jsx  ThreadView.jsx
frontend/src/components/app/: ErrorBanner.jsx  ResultsColumn.jsx  SearchArea.jsx  StatsPanelModal.jsx  ThreadColumn.jsx  ViewTabContent.jsx
frontend/src/components/ui/: alert.jsx  badge.jsx  button.jsx  card.jsx  input.jsx  label.jsx  separator.jsx
frontend/src/lib/: autoUpdater.js
