[package]
name = "gmail-memory"
version = "0.1.0"
description = "Local-first Gmail search and memory"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "fs-create-dir", "notification-all", "fs-read-file", "fs-read-dir", "shell-open", "shell-sidecar", "http-all", "process-relaunch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
